--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "animate.css": "^4.1.1",
     "antd": "^5.6.3",
     "axios": "^1.3.4",
+    "flatted": "^3.2.9",
     "i18next": "^22.4.14",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-i18next": "^12.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.12.0",
     "react-loading-skeleton": "^3.2.1",
     "react-quill": "^2.0.0",
     "react-quill-image-uploader": "^0.1.1",
