--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "antd": "^5.6.3",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.10",
     "flatted": "^3.2.9",
     "i18next": "^22.4.14",
     "moment": "^2.29.4",
