--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^22.4.14",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
